Prevent display of the x-axis scrollbar

--- a/themes/barba/source/scss/base/_global.scss
+++ b/themes/barba/source/scss/base/_global.scss
@@ -13,6 +13,8 @@ html {
 }
 
 body {
+  overflow-x: hidden;
+
   &.prevent-scroll {
     overflow: hidden;
     height: 100vh;
